--- a/source/_posts/xv6-1.md
+++ b/source/_posts/xv6-1.md
@@ -1,7 +1,7 @@
 ---
 title: MIT 6.S081 Operating system interface笔记
 date: 2021-03-06 09:36:59
-tags:
+tags: xv6
 ---
 [xv6 book](https://pdos.csail.mit.edu/6.S081/2020/xv6/book-riscv-rev1.pdf)  
 ## pipe
@@ -114,3 +114,35 @@ main(int argc, char *argv[])
   exit(0);
 }
 ```
+
+## fork
+```
+if (fork() == 0) {
+  代码1
+}
+代码2
+```
+子进程会执行代码2吗？ 
+```c
+int
+main(int argc, char *argv[])
+{
+  int pid = fork();
+  if(pid == 0){
+    printf("This is child\n");
+    sleep(10);
+    // exit(0);
+  }
+  sleep(10);
+  printf("pid: %d\n", pid);
+
+  exit(0);
+}
+```
+输出  
+```shell
+This is child
+pid: 4
+pid: 0
+```
+其实是会执行代码2的，但是一般都会在子进程结束时加上exit，这样就不会执行代码2了。  
